fix to div for insta feed overflow hidden

--- a/css/main.css
+++ b/css/main.css
@@ -2398,3 +2398,7 @@ footer .menu li a:hover {
 .carousel-item img {
   opacity: 0.4;
 }
+
+.insta {
+  overflow:hidden
+}
